--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
   "homepage": "https://github.com/jeremyleitmeyer/discord-now-playing-bot#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0-beta.2",
     "discord": "^0.8.2",
     "discord.io": "github:woor/discord.io#gateway_v6",
     "express": "^4.16.2",
-    "node-rest-client": "^3.1.0",
-    "osu-api": "0.0.3",
-    "request-promise": "^4.2.2",
-    "winston": "^2.4.0",
-    "bootstrap": "^4.0.0-beta.2",
     "font-awesome": "4.7.0",
     "jquery": "^3.2.1",
     "jquery.easing": "^1.4.1",
     "magnific-popup": "^1.1.0",
-    "scrollreveal": "3.3.6"
+    "node-rest-client": "^3.1.0",
+    "osu-api": "0.0.3",
+    "request-promise": "^4.2.2",
+    "scrollreveal": "3.3.6",
+    "winston": "^2.4.0"
   }
 }
