--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "magnific-popup": "^1.1.0",
     "node-rest-client": "^3.1.0",
     "osu-api": "0.0.3",
+    "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "scrollreveal": "3.3.6",
     "winston": "^2.4.0"
